fix button spacing and drop down

--- a/src/css/master.css
+++ b/src/css/master.css
@@ -132,6 +132,14 @@ form:nth-child(2) {
   margin-top: 20px;
 }
 
+/******<< Edit Styles >>******/
+
+/*select {
+  width: 100%;
+  margin-top: 5px;
+}*/
+
+
 /******<< Search Styles >>******/
 
 .search form {
